# DeepRetrieve

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  render.yaml  requirements.txt  workflow.ipynb
backend/api/: __init__.py  app.py  models.py  pdf_processor.py  routes.py  run.py
backend/hf_clip_space/: requirements.txt
backend/mcp_server/: README.md  __init__.py  config.py  embeddings.py  llm.py  retriever.py  server.py  web_search.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/chat/: ChatPanel.jsx  PdfViewer.jsx  SourcesPanel.jsx  WorkspaceLayout.jsx
frontend/src/components/landing/: AppMockup.jsx  Comparison.jsx  Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  ParticleBackground.jsx  Upload.jsx  UploadDemo.jsx  VideoDemo.jsx  index.js
frontend/src/pages/: ChatPage.jsx  LandingPage.jsx
hf_clip_space/: app.py
