[project]
name = "backend"
version = "1.0.0"
description = "DeepRetrieve - MCP-Powered Agentic Multimodal RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py>=0.11.0",
    "fastapi>=0.115.0",
    "fastmcp>=2.9.2",
    "google-generativeai>=0.8.5",
    "langchain>=1.1.0",
    "opencv-python>=4.11.0.90",
    "pillow>=11.3.0",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.16.1",
    "tavily-python>=0.7.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.32.0",
]

[project.scripts]
deepretrieve = "mcp_server.server:run_server"
deepretrieve-api = "api.run:main"
