[project]
name = "backend"
version = "1.0.0"
description = "DeepRetrieve - MCP-Powered Agentic Multimodal RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=2.9.2",
    "google-genai>=0.5.0",
    "pillow>=11.3.0",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.16.1",
    "sentence-transformers>=3.0.0",
    "tavily-python>=0.7.3",
    "uvicorn>=0.32.0",
]

[project.scripts]
deepretrieve = "mcp_server.server:run_server"
deepretrieve-api = "api.run:main"

# Pin torch to a stable CUDA 11.8 wheel for Python 3.12 / Windows
# (avoids uv resolving the nightly 2.11.0 build which has broken DLLs on Windows)
[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.5.1%2Bcu118-cp312-cp312-win_amd64.whl" }
